# DATASCI210

./: DataDictionary.md  README.md  WBTC_Market_Price.xlsx  WETH_MarketPrice.xlsx  hourly_0x7bea39867e4169dbe237d55c8242a8f2fcdcc387.xlsx  hourly_0x88e6a0c2ddd26feeb64f039a2c41296fcb3f5640.xlsx  hourly_0x8ad599c3a0ff1de082011efddc58f1908eb6e6d8.xlsx  pyproject.toml  weth_to_usd_hist.xlsx  weth_to_usdc_hist.xlsx
